infrastructure/kube/keep-prd/tbtc-dapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tbtc-dapp
  namespace: default
  labels:
    app: tbtc-dapp
    type: dapp
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: tbtc-dapp
    type: dapp
