infrastructure/kube/keep-prd/tbtc-dapp-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tbtc-dapp
  namespace: default
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: tbtc-dapp-ingress
spec:
  tls:
  - secretName: tbtc-network-cloudflare-origin-cert
  backend:
    serviceName: tbtc-dapp
    servicePort: 80
